# retail-develop

./: .gitignore  .pre-commit-config.yaml  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  pyproject.toml
retail/: hooks.py  utils.py
retail-suite/: .gitignore  index.html  package.json  tailwind.config.js  vite.config.js  webpack.config.js
retail-suite/src/: App.vue  index.css  main.css  main.js  router.js  socket.js
retail-suite/src/components/: MobileScanOverlay.vue
retail-suite/src/components/barcodes/: BarcodesUnified.vue
retail-suite/src/components/cart/: Cart.vue  CartItem.vue  CustomerSection.vue  DiscountPanel.vue  PatientSection.vue  PaymentSection.vue  PaymentsList.vue  ReturnInvoicePanel.vue  ReturnSection.vue  TaxSummaryStrip.vue
retail-suite/src/composables/: barcode.js  useBarcode.js  useConfirm.js  useKeyboardShortcuts.js  useReceipt.js  useToast.js
retail-suite/src/data/: sample.json
retail-suite/src/db/: indexedDB.js  network.js  sync.js
retail-suite/src/i18n/: index.js
retail-suite/src/layout/: Activity.vue  Header.vue  SearchBar.vue  Sidebar.vue  Sidebar2025.vue  StatsCard.vue
retail-suite/src/pages/: ForbiddenView.vue  MobileScan.vue  NonPage.vue  POS.vue  Pay.vue
retail-suite/src/services/: api.js  auth.js  qrBot.js  useMobileScanSession.js
retail-suite/src/stores/: cart.js  inventory.js  invoices.js  products.js  settings.js  shift.js
retail-suite/src/utils/: formatters.js  icon-stub.js  utils.js
retail/fixtures/: property_setter.json
retail/public/retail_suite/: index.html  version.json
retail/retail/: setup.py  workspace_installer.py
retail/retail/api/: address.py  barcode_scan.py  contact.py  i18n.py  inventory.py  invoice.py  m_pesa.py  mobile_scan.py  payment_entry.py  payment_utils.py  posapp.py  pricing_rule.py  setting.py  shifts.py  status_updater.py
retail/retail/fixtures/: custom_field.json
retail/templates/pos_closing_shift/: pos_closing_shift.html
retail/translations-retail/: ar.csv
retail/www/: pos.html  pos.py
(+106 files in other folders)
