[project]
name = "retail"
authors = [
    { name = "Rans", email = "ransbor82@gmail.com"}
]
description = "Retail Suite Backend is a powerful and flexible backend solution built on the Frappe Framework, designed to manage both POS (Point of Sale) systems and eCommerce websites. It provides seamless integration for retail operations, including inventory management, order processing, customer data management, and sales analytics. Ideal for businesses looking to unify in-store and online sales under a single backend system"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "qrcode[pil]",
    "python-barcode",
    "pillow",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
